--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>babalabalabala的网站</title>
-    <link rel="icon" href="./img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon" />>
+    <link rel="icon" href="./img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="./img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon" />
     <link href="./css/global.css" rel="stylesheet"/>
     <link href="./css/index.css" rel="stylesheet"/>
