--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="babalabalabala的网站"/>
     <meta name="keyword" content="babalabalabala的网站"/>
     <link rel="icon" href="./img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon"/>
-    <link rel="shortcut icon" href="/img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="./img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon"/>
     <link href="./css/global.css" rel="stylesheet"/>
     <link href="./css/index.css" rel="stylesheet"/>
 </head>
