--- a/node-selenium/index.html
+++ b/node-selenium/index.html
@@ -7,6 +7,7 @@
     <meta name="keyword" content="babalabalabala的网站"/>
     <link rel="icon" href="../img/favicon.ico" mce_href="../img/favicon.ico" type="image/x-icon"/>
     <link href="../css/global.css" rel="stylesheet"/>
+    <link href="../css/highlight/default.css" rel="stylesheet"/>
     <link href="./css/index.css" rel="stylesheet"/>
 </head>
 <body>
@@ -17,16 +18,14 @@
         <h1>node-selenium学习笔记</h1>
 
         <p>一个简单的例子</p>
-        <code>
-            <pre>
+        <pre>
+            <code class="javascript">
 var fs = require('fs');
 var userInfo = require('./private');
 var webdriver = require('selenium-webdriver');
-
 var driver = new webdriver.Builder().withCapabilities(webdriver.Capabilities.chrome()).build();
 
 driver.get('http://www.1688.com/');
-
 driver.findElement(webdriver.By.className('account-signin')).click().then(function () {
     driver.getAllWindowHandles().then(function(handles){
         console.log(handles);
@@ -55,13 +54,15 @@ driver.findElement(webdriver.By.className('account-signin')).click().then(functi
         });
     });
 });
-</pre>
-        </code>
+</code>
+        </pre>
     </div>
 
     <footer>
         联系方式：babalabalabala@qq.com
     </footer>
 </div>
+<script src="../js/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
