--- a/node-selenium/index.html
+++ b/node-selenium/index.html
@@ -7,7 +7,7 @@
     <meta name="keyword" content="babalabalabala的网站"/>
     <link rel="icon" href="../img/favicon.ico" mce_href="../img/favicon.ico" type="image/x-icon"/>
     <link href="../css/global.css" rel="stylesheet"/>
-    <link href="../css/highlight/default.css" rel="stylesheet"/>
+    <link href="../css/highlight/dark.css" rel="stylesheet"/>
     <link href="./css/index.css" rel="stylesheet"/>
 </head>
 <body>
