--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>babalabalabala的网站</title>
+    <meta name="baidu-site-verification" content="UeowMImcUI" />
     <meta name="description" content="babalabalabala的网站"/>
     <meta name="keyword" content="babalabalabala的网站"/>
     <link rel="icon" href="./img/favicon.ico" mce_href="./img/favicon.ico" type="image/x-icon"/>
