--- a/node-selenium/index.html
+++ b/node-selenium/index.html
@@ -31,7 +31,7 @@
         <p>新建开发目录，在此目录打开命令行工具，输入命令npm install selenium-webdriver<br/>
         <img src="./img/2.png" /></p>
         <h3>5、开发代码测试</h3>
-        <p>官网给的例子是那google开到，在国内就用百度开刀吧，下面是一个简单的例子</p>
+        <p>官网给的例子是那google开刀，在国内就用百度开刀吧，下面是一个简单的例子</p>
         <pre>
             <code class="javascript">
 var webdriver = require('selenium-webdriver');
