--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <li>如何创建github个人网站：<a href="https://help.github.com/articles/user-organization-and-project-pages" target="_blank">GitHub Help</a>
             </li>
             <li>w3cscholl：<a href="http://www.w3school.com.cn" target="_blank">领先的 Web 技术教程</a></li>
-            <li>node-selenium学习笔记：<a href="./node-selenium/index.html" target="_blank">node-selenium学习笔记</a></li>
+            <li>nodenode-selenium学习笔记：<a href="./node-selenium/index.html" target="_blank">node-selenium学习笔记</a></li>
+            <li>CSS3学习网站：<a href="http://www.w3cplus.com/content/css3-gradient" target="_blank">3cplus</a></li>
+            <li>w3ctech：<a href="http://www.w3ctech.com/" target="_blank">w3ctech</a></li>
+            <li>w3c官网：<a href="http://www.w3.org/" target="_blank">w3</a></li>
         </ol>
     </div>
 
