--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <li>CSS3学习网站：<a href="http://www.w3cplus.com/content/css3-gradient" target="_blank">3cplus</a></li>
             <li>w3ctech：<a href="http://www.w3ctech.com/" target="_blank">w3ctech</a></li>
             <li>w3c官网：<a href="http://www.w3.org/" target="_blank">w3</a></li>
+            <li>casperjs<a href="http://casperjs.org/" target="_blank">casperjs</a></li>
+            <li>node代理服务器<a href="./node-proxy/index.html" target="_blank">简单的node代理服务器</a></li>
         </ol>
     </div>
 
