--- a/node-proxy/index.html
+++ b/node-proxy/index.html
@@ -23,7 +23,7 @@
         <p><img src="img/2.png"></p>
         <p>结构还有点乱，后面有时间再优化，补充功能。代码可以从<a href="https://github.com/balabalababala/nodeHttpProxy" target="_blank">这里</a>找到</p>
         <div class="ref">
-            参考文档：<a href="https://code.google.com/p/selenium/wiki/WebDriverJs" target="_blank">https://code.google.com/p/selenium/wiki/WebDriverJs</a>
+            参考文档：<a href="http://nodejs.org/api/http.html#http_http_request_options_callback" target="_blank">http://nodejs.org/api/http.html#http_http_request_options_callback</a>
         </div>
     </div>
     <footer>
